# rc_cvae

./: LICENSE.md  README.md  Run_VAEs.ipynb  cvae_models.py  pyproject.toml  requirements.txt  setup.cfg
src/rc_cvae/: Run_VAEs.ipynb  cvae_models.py  descriptors_generation.py
src/rc_cvae/data/Reaxys_IDs/: test_datasetB_reaxys_id.csv
src/rc_cvae/example_data/: acids_bases_poisons_list.txt  catalysts_list.txt  example_hydrogenation_USPTO.rdf
