[metadata]
name = rc_cvae
version = 1.0.0
author = Daniyar Mazitov
author_email = daniyarttt@gmail.com
description = CVAE models for prediction reaction conditions for hydrogenation reactions
long_description = file: README.md
license = MIT
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = ==3.6.*
install_requires =    
    numpy == 1.18.1
    tensorflow-gpu == 2.1.0 ; python_version == '3.6.*'
    tensorflow == 2.1.0 
    tensorflow_probability == 0.9.0
    keras == 2.2.4
    hyperspherical-vae @ git+https://github.com/cimm-kzn/s-vae-tf.git@master
    cgrtools == 3.1.9
    CIMtools==3.1.0
nclude_package_data = True
package_dir=
    =src
packages=find:
 
[options.packages.find]
where = src

[options.package_data]
* = src/*